--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,13 +2,31 @@
 
 <h1>Tasks</h1>
 
+<%= search_form_for @q do |f| %>
+  <%= label_tag nil, 'キーワード' %>
+  <%= f.search_field :title_or_description_cont %>
+  <%= label_tag nil, '期間' %>
+  <%= f.date_field :deadline_gteq %> <!-- 締め切り以降 -->
+  <span>~</span>
+  <%= f.date_field :deadline_lteq_end_of_day %> <!-- 締め切りまで -->
+
+    <%= f.label :status %>
+    <%= f.radio_button :status_eq, '', {:checked => true} %>指定なし
+    <%= f.radio_button :status_eq, 0 %>to do
+    <%= f.radio_button :status_eq, 1 %>doing
+    <%= f.radio_button :status_eq, 3 %>done
+  
+   <%= f.submit '検索' %>
+<%end%>
+
+
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
       <th>Status</th>
-      <th>Deadline</th>
+      <th><%= sort_link(@q, :deadline, "Deadline") %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
