--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,14 +2,17 @@
 
 <h1>Tasks</h1>
 
-<%= search_form_for @q do |f| %>
-  <%= label_tag nil, 'キーワード' %>
-  <%= f.search_field :title_or_description_cont %>
-  <%= label_tag nil, '期間' %>
-  <%= f.date_field :deadline_gteq %> <!-- 締め切り以降 -->
-  <span>~</span>
-  <%= f.date_field :deadline_lteq %> <!-- 締め切りまで -->
+  <%= search_form_for @q do |f| %>
+    <%= f.label :title_or_description, 'キーワード' %>
+   <%= f.search_field :title_or_description_cont %>
 
+   <!-- 期間検索 -->
+   <%= f.label :deadline, '期間' %>
+    <%= f.date_field :deadline_gteq %> <!-- 締め切り以降 -->
+    <span>~</span>
+    <%= f.date_field :deadline_lteq %> <!-- 締め切りまで -->
+
+    <!-- ステータスボタン -->
     <%= f.label :status %>
     <%= f.radio_button :status_eq, '', {:checked => true} %>指定なし
     <%= f.radio_button :status_eq, 0 %>to do
@@ -26,7 +29,7 @@
       <th>Title</th>
       <th>Description</th>
       <th>Status</th>
-      <th><%= sort_link(@q, :deadline, "Deadline") %></th>
+      <th><%= sort_link(@q, :deadline, 'Deadline', default_order: :desc) %></th>
       <th colspan="3"></th>
     </tr>
   </thead>
